--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -7,14 +7,17 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 
 
 body {
-  padding-top: 4rem;
-  padding-bottom: 3rem;
-  min-height: 100%;
   background-image: url("/images/riding-wheelchair.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+
+  & > .container {
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+  }
+  color: $gray-800;
 }
 
 nav {
@@ -22,4 +25,19 @@ nav {
   @extend .bg-dark;
 
   opacity: 0.8;
+}
+
+
+$color-helper: lighten($blue, 40%);
+$color-doctor: lighten($teal, 40%);
+
+@each $key, $color in ("helper": $color-helper, "doctor": $color-doctor) {
+  .bg-#{$key} {
+    color: darken($color, 70%);
+    background-color: $color;
+
+    a {
+      color: darken($color, 50%);
+    }
+  }
 }
