Create helper view

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -3,7 +3,7 @@
     .card.text-center
       .card-body.bg-helper
         h5.card-title Helper
-        = link_to "#", class: %w(stretched-link) do
+        = link_to [:helper], class: %w(stretched-link) do
           i.fas.fa-user-nurse.fa-3x
 
   .col
