--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -15,7 +15,8 @@ body {
 
   & > .container {
     padding-top: 4rem;
-    padding-bottom: 3rem;
+    padding-bottom: 5rem;
+    overflow-y: scroll;
   }
   color: $gray-800;
 }
