--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,6 +17,7 @@ html
       div.navbar-collapse.collapse id="navbarCollapse" style=""
         == render 'layouts/menu'
     .container.vh-100
+      == render 'layouts/subheader'
       == yield
     == render 'layouts/bottom_menu'
 
