--- a/app/views/layouts/_bottom_menu.html.slim
+++ b/app/views/layouts/_bottom_menu.html.slim
@@ -1,1 +1,7 @@
-.fixed-bottom
+nav.navbar.navbar-expand.fixed-bottom.navbar-dark.bg-dark.justify-content-between
+  = link_to [:helper, :incidents], class: %w(nav-link text-light) do
+    i.fas.fa-edit.fa-2x.fa-fw
+  = link_to [:helper], class: %w(nav-link text-light) do
+    i.fas.fa-home.fa-2x.fa-fw
+  = link_to [:helper], class: %w(nav-link text-light) do
+    i.fas.fa-user-md.fa-2x.fa-fw
