--- a/app/views/doctor/home/show.html.slim
+++ b/app/views/doctor/home/show.html.slim
@@ -1,6 +1,7 @@
 .list-group.mt-4
   - @incidents.each do |incident|
     - bg = "bg-#{incident.category.text.downcase}"
-    = link_to [:edit, :helper, incident], class: %w(list-group-item) + [bg] do
+    = link_to [:edit, :doctor, incident], class: %w(list-group-item) + [bg] do
       = render "common/category_icon", text: incident.category.text, fw: true
+      span.ml-3 = incident.user.username
       .float-right = incident.created_at.strftime "%m/%d %H:%M"
