--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -10,5 +10,5 @@
     .card.text-center
       .card-body.bg-doctor
         h5.card-title Doctor
-        = link_to "#", class: %w(stretched-link) do
+        = link_to [:doctor], class: %w(stretched-link) do
           i.fas.fa-user-md.fa-3x
