--- a/app/views/doctor/incidents/_form.html.slim
+++ b/app/views/doctor/incidents/_form.html.slim
@@ -5,13 +5,13 @@
 .row.justify-content-center.mt-4
   .col-6
     .card.text-center
-      .card-body class="bg-#{@incident.category.text.downcase}"
+      .card-body.bg-helper
         h5.card-title = @incident.category.text
         = render "common/category_icon", text: @incident.category.text, large: true
 
 .w-100.mt-3
 
-= form_for [:helper, @incident] do |f|
+= form_for [:doctor, @incident] do |f|
   = f.hidden_field :category_id
   .form-group
     = f.label :note
