--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,9 +1,9 @@
 .row.align-items-center.h-100
   .col
     .card.text-center
-      .card-body.bg-helper
-        h5.card-title Helper
-        = link_to [:helper], class: %w(stretched-link) do
+      .card-body.bg-sitter
+        h5.card-title Sitter
+        = link_to [:sitter], class: %w(stretched-link) do
           i.fas.fa-user-nurse.fa-3x
 
   .col
