--- a/app/views/layouts/_subheader.html.slim
+++ b/app/views/layouts/_subheader.html.slim
@@ -1,11 +1,19 @@
 - if current_user && [::Sitter, ::Doctor].include?(controller.class.module_parent)
-  .float-right.mt-2
-    - if controller.class.module_parent == ::Sitter
+  - if controller.class.module_parent == ::Sitter
+    .float-right.mt-2
       .bg-sitter.rounded.px-2
         i.fas.fa-user-nurse.mr-2
         = current_user.username
-    - if controller.class.module_parent == ::Doctor
+  - if controller.class.module_parent == ::Doctor
+    .mt-2
+    .float-right
       .bg-doctor.rounded.px-2
         i.fas.fa-user-md.mr-2
         = current_user.username
+    - if @sitter
+      .float-left
+        .bg-sitter.rounded.px-2
+          i.fas.fa-user-nurse.mr-2
+          = @sitter.username
+
   .clearfix
